<resources>
    <string name="app_name">Type A 101</string>
    <string name="task_name">Task Name</string>
    <string name="tag_name">Tag Name</string>
    <string name="cancel">Cancel</string>
    <string name="start_task">Start Task</string>
    <string name="starting_time">Starting Time:</string>

    <string name="started_on">Started On:</string>
    <string name="edit">Edit</string>
    <string name="add_notes">Add Notes</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="navigation_drawer">Navigation drawer</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>

    <string name="percent_of_day">% of day</string>
    <string name="delete_task">Delete Task</string>
    <string name="finish_editing">Finish editing</string>
    <string name="to">to</string>
    <string name="returned_to_today">"Returned to today: "</string>
    <string name="present">Present</string>
    <string name="past">Past</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">Day</string>
    <string name="start_time">Start Time</string>
    <string name="manually_with_picker">Manually with picker.</string>
    <string name="open_time_picker">Open time picker.</string>
    <string name="after_existing_task">After existing task.</string>
    <string name="open_existing_task_list">Open existing task list.</string>
    <string name="end_time">End Time</string>
    <string name="before_existing_task">Before existing task.</string>
    <string name="duration">Duration</string>
    <string name="confirm">Confirm</string>
    <string name="start_day">Start Day</string>
    <string name="show_day_picker">Show day picker.</string>
    <string name="end_day">End Day</string>
    <string name="errors">Errors</string>
</resources>
