<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DialogCardView"
    tools:context=".modifycurrenttask.view.ModifyCurrentTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/DialogCardViewLLMainContent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/task_name_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name">

                <AutoCompleteTextView
                    android:id="@+id/task_name_edit"
                    style="@style/TaskNameText" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tag_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tag_name">

                <AutoCompleteTextView
                    android:id="@+id/tag_edit"
                    style="@style/TagText" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/starting_time" />

            <TextView
                android:id="@+id/starting_time_text"
                style="@style/StartEndTimeText"
                android:layout_gravity="center"
                tools:text="7:23:12 AM" />
        </LinearLayout>

        <View style="@style/ButtonCardViewDivider" />

        <FrameLayout
            android:id="@+id/add_task_buttons"
            style="@style/DialogBottomButtomFrame">

            <Button
                android:id="@+id/start_task_button"
                style="@style/DialogButtonEnd"
                android:text="@string/start_task" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/DialogButtonStart"
                android:text="@string/cancel" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/edit_task_buttons"
            style="@style/DialogBottomButtomFrame">

            <Button
                android:id="@+id/delete_task_button"
                style="@style/DialogButtonStart"
                android:text="@string/delete_task" />

            <Button
                android:id="@+id/cancel_edit_button"
                style="@style/DialogButtonCenter"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/finish_editing_button"
                style="@style/DialogButtonEnd"
                android:text="@string/finish_editing" />
        </FrameLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
