<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tracker_layout"
    style="@style/DialogCardViewWithBottomMargin"
    tools:context="co.dijam.michael.typea101.currenttracker.view.TrackerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/DialogCardViewLLMainContent">

            <TextView
                android:id="@+id/task_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="TASK" />

            <TextView
                android:id="@+id/tag_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="CATEGORY" />

            <View
                style="@style/InlineCardViewDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/started_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/started_on_margin_right"
                    android:layout_marginRight="@dimen/started_on_margin_right"
                    android:text="@string/started_on"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/starting_time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12:23 AM" />
            </LinearLayout>

            <TextView
                android:id="@+id/running_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="00 hr 00 min 00 sec" />

        </LinearLayout>

        <View
            style="@style/ButtonCardViewDivider" />

        <FrameLayout style="@style/DialogBottomButtomFrame">

            <Button
                android:id="@+id/add_notes_button"
                style="@style/DialogButtonEnd"
                android:text="@string/add_notes" />

            <Button
                android:id="@+id/edit_button"
                style="@style/DialogButtonStart"
                android:text="@string/edit" />
        </FrameLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

