<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".mainscreen.view.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Add icons using "Icon Pack Drawable Importer"-->
        <!--Size: 24 dp-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ActionBarTheme"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <ImageButton
                android:id="@+id/nav_drawer_button"
                style="@style/ToolbarImageButton"
                android:contentDescription="@string/navigation_drawer"
                android:src="@drawable/ic_menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/previous_day_button"
                    style="@style/ToolbarImageButton"
                    android:contentDescription="@string/previous_day"
                    android:src="@drawable/ic_chevron_left" />

                <ImageButton
                    android:id="@+id/date_picker_button"
                    style="@style/ToolbarImageButton"
                    android:contentDescription="@string/previous_day"
                    android:src="@drawable/ic_action_calendar_day" />

                <TextView
                    android:id="@+id/date_text_view"
                    style="@style/ToolbarText"
                    tools:text="Fri, 9 Sep 2016" />

                <ImageButton
                    android:id="@+id/next_day_button"
                    style="@style/ToolbarImageButton"
                    android:contentDescription="@string/next_day"
                    android:src="@drawable/ic_chevron_right" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/main_screen_content" />
    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/main_screen_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>
